Fixed Charsheet. Fixed Dark Mode. Fixed Arcana.

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -33,7 +33,6 @@ button[type='roll'].words {
 
 .charsheet {
 	padding: 0 !important;
-	display: inline-block !important;
 	margin: 0 auto !important;
 }
 
