--- a/scss/_languages.scss
+++ b/scss/_languages.scss
@@ -9,7 +9,7 @@
 		justify-content: space-between;
 	}
 
-	select {
+	input {
 		height: 24px !important;
 	}
 
